# sandbox

./: ._azurecommands.md  .bash_profile  .gitignore  LICENSE  README.md  azurecommands.md  commands  commands2
angulardemo/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
autogen-agents-demo/: app.py  app2.py  app3.py  app4.py  readme.md
batchfiles/: movedatamover.cmd  movedbinstaller.cmd
clang/: ._CMakeLists.txt  ._testgit.txt  CMakeLists.txt
clang/cmake/: Findcryptopp.cmake
clang/src/: log.cpp  main.cpp
command/: azure.md  docker.md  elasticdump.md  elasticqueries.md  git.md  linux.md  powershell.md  salesforce.md
composetest/: docker-compose.yml  kibana.yml
githubapp/: .gitignore  Readme.md  configuregithub  package-lock.json  package.json  server.js
liquibase/: .env  Environment.ts  Readme.md  index.ts  master.yml  package.json  pnpm-lock.yaml  tsconfig.json
mtpostgres/: createdatabase.sql  createextensionsrolesusers.sql  createschema.sql  dropdatabase.sql  dropdb.ps1  installdb.ps1  postgresresearch.sql
prisma/: Readme.md  foo.js  foo.json  index.js  package.json  pnpm-lock.yaml
profiles/: .zshrc  Microsoft.PowerShell_profile.ps1  mac_zshrc  ssh.exe.stackdump  ubuntu_bash_profile
roslyn/: Program.cs  roslyn.sln
tailwind/: package.json  pnpm-lock.yaml  tailwind.config.js
tsbasics/: ._package-lock.json  ._package.json  ._tsconfig.json
vscodeextension/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscodesnippets/: elasticMapText.code-snippets
vssnippets/: mysnippets.snippet
(+230 files in other folders)
